--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   # Biographic information
   avatar           : "profile.png"
   name             : "Aaron N. Best, PhD"
-  pronouns         : "example: he/him"  
+  pronouns         : "he/him"  
   bio              : "Postdoctoral Research Fellow"
   location         : "Canada"
   employer         : "University of British Columbia"
